# github-rag-explorer-main

./: .gitignore  github_rag.py  pyproject.toml  readme.md  web_ui.py
github_rag_explorer/: __init__.py  cli.py  constants.py
github_rag_explorer/data/: __init__.py  loader.py  processor.py
github_rag_explorer/indexing/: __init__.py  builder.py  query.py
github_rag_explorer/models/: __init__.py  base.py  llm.py
github_rag_explorer/ui/: app.py  components.py  pages.py  run.py
spring-app/: README.md  pom.xml
spring-app/src/main/java/com/example/githubrag/: GithubRagExplorerApplication.java
spring-app/src/main/java/com/example/githubrag/controller/: SearchController.java
spring-app/src/main/java/com/example/githubrag/dto/: SearchRequest.java  SearchResult.java
spring-app/src/main/java/com/example/githubrag/model/: RepositoryDocument.java
spring-app/src/main/java/com/example/githubrag/repository/: RepositoryDocumentRepository.java
spring-app/src/main/java/com/example/githubrag/service/: GithubService.java  IndexingService.java  RagService.java
spring-app/src/main/resources/: application.yml
spring-app/src/main/resources/templates/: index.html
spring-app/src/test/java/com/example/githubrag/: SearchControllerTest.java
